<resources>
    <string name="app_name">PostobonApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>



    <string name="postobon_button"> Postobon</string>
    <string name="postobon_content">Postobon</string>
    <string name="ubication_init">Ubicación</string>
    <string name="armenia_city">Armenia</string>
    <string name="bogota_city">Bogotá</string>
    <string name="cali_city">Cali</string>
    <string name="medellin_city">Medellin</string>
    <string name="otra_city">Otra</string>
    <string name="add_personal_inf">Agrega tus datos personales</string>
    <string name="personal_inf">Tus datos personales</string>
    <string name="names">Nombres</string>
    <string name="last_name">Apellidos</string>
    <string name="e_mail">Correo electronico</string>
    <string name="pass">Contraseña</string>
    <string name="create_pass_access">Crea una contraseña de acceso</string>
    <string name="i_agree_term_">Acepto términos y condiciones de uso</string>
    <string name="add_shipping_address">Agrega la dirección de envío</string>
    <string name="shipping_address">Dirección de envío</string>
    <string name="add_the_address">Ingresa la dirección</string>
    <string name="add_apt_office_inf">Datos del apartamento u oficina.</string>
    <string name="address_type">Tipo de dirección</string>
    <string name="home">Casa</string>
    <string name="office">Oficina</string>
    <string name="to_register">Registrarme</string>
    <string name="my_profile">Mi perfil</string>
    <string name="know_our_products">Conoce todos nuestros productos</string>
    <string name="about_app">Sobre esta app</string>
    <string name="personal_info">Datos personales</string>
    <string name="address_delivery">Dirección de entrega</string>
    <string name="favorite_products">Productos favoritos</string>
    <string name="orders_history">Historial de pedidos</string>
    <string name="sodas">Gaseosas</string>
    <string name="fruits">Frutas</string>
    <string name="water">Aguas</string>
    <string name="taes">Tés</string>
    <string name="moisturizers">Hidratantes</string>
    <string name="energizing">Energizantes</string>
    <string name="postobon">Postobón</string>
    <string name="filter_for">Filtrar por</string>
    <string name="colombiana">Colombiana</string>
    <string name="pepsi">Pepsi</string>
    <string name="know_all_products">Conoce todos nuestros productos</string>
    <string name="btn_create_acount">Registrarse</string>
    <string name="sign_in">Ingresar</string>
    <string name="btn_unregister_session">Entrar sin registrarse</string>
    <string name="loggin">Entrar</string>
    <string name="loggin_header_text">Ingresa tus credenciales</string>
    <string name="password_forgotten">¿Olvidó su contraseña?</string>
    <string name="empty_password_error">Contraseña vacía</string>
    <string name="not_mail_pattern">No es un correo válido</string>
    <string name="empty_email">Correo vacío</string>
    <string name="city_selection_description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</string>
    <string name="not_accepted_terms">Debe aceptar los términos y condiciones</string>
    <string name="invalid_fields">Algunos campos son inválidos</string>
    <string name="empty_direction">Dirección vacía</string>
    <string name="manzana_postobon">Manzana Postobón</string>
    <string name="unidades">Unidades</string>
    <string name="value">Valor</string>
    <string name="add_to_shipping">Agregar al pedido</string>
    <string name="dummy_text">Descripción del producto. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</string>
    <string name="dummy_text_shipping">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</string>
    <string name="address">Dirección</string>
    <string name="when_you_wt_receive_your_order">Cuando desea recibir su pedido</string>
    <string name="next_thursday">Próximo Jueves</string>
    <string name="tomorrow">Mañana</string>
    <string name="select_pay_mode">Seleccionar metodo de pago</string>
    <string name="how_is_your_first_order">Como se trata de tu primer pedido, por favor ingresa tu cédula de ciudadania: </string>
    <string name="add">Agregar</string>
    <string name="cedula">Cédula de ciudadania</string>
    <string name="select_a_option">Seleccione una opción:</string>
    <string name="upon_delivery">Contra entrega</string>
    <string name="pay_whit_card">Pago con tarjeta débito / crédito</string>
    <string name="see_summary">Ver el resumen</string>
    <string name="dummy_text_shipping_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="bottle_350">Botella(350 ml)</string>
    <string name="delete_product"><u>Eliminar producto</u>.</string>
    <string name="partial_valuet">Valor parcial:</string>
    <string name="parial_value_result_ex">$4.500</string>
    <string name="make_order">Hacer mi pedido</string>
    <string name="total">Total</string>
    <string name="make_order_total_ex">$9.500</string>
    <string name="confirmation">Confirmación</string>
    <string name="dummy_confirmation">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus.</string>
    <string name="come_back_ppal_page">Volver a la pagina principal</string>






</resources>
