<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="50dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ly_order_2">





        <LinearLayout
            android:id="@+id/ly_order_2_1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:weightSum="1">


            <TextView
                android:text="@string/dummy_text_shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorBlack"
                android:id="@+id/tV_dummy_text_shipping" />

            <TextView
                android:text="@string/how_is_your_first_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:layout_marginTop="15dp"
                android:textAlignment="center"

                android:layout_marginLeft="22dp"
                android:textColor="@color/colorBlack"
                android:id="@+id/tV_how_is_your_first_order" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/add_cedula"
                android:layout_marginTop="30dp"
                >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:text="@string/cedula"
                android:textSize="14dp"
                android:background="@color/colorWhite"
                android:ems="10"
                android:id="@+id/eT_cedula_ciudadania"
                android:layout_weight="1" />

                <Button
                    android:text="@string/add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/add_id"
                    android:background="@color/colorMenu"
                    android:textColor="@color/colorWhite"
                    style="@style/OrderButton"

                    android:layout_weight="2"/>


            </LinearLayout>


            <TextView
                android:text="@string/select_a_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21dp"

                android:layout_marginTop="35dp"
                android:textColor="@color/colorMenu"
                android:id="@+id/tV_select_a_option" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:text="@string/upon_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_upon_delivery"
                    android:layout_weight="1"
                    style="@style/RadioButton2"/>

                <RadioButton
                    android:text="@string/pay_whit_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_pay_whit_card"
                    android:layout_weight="1"
                    style="@style/RadioButton2"/>


            </RadioGroup>

            <Button
                android:text="@string/see_summary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_see_summary"
                android:background="@color/colorMenu"
                android:textColor="@color/colorWhite"
                style="@style/OrderButton"
                android:layout_marginTop="50dp"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>