<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgapp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/logopostobon"
            android:id="@+id/address_logopos"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="1">


        <TextView
            android:text="@string/shipping_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address_ship_textView"
            android:gravity="center_horizontal"
            style="@style/TextViewH1White" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:weightSum="1">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/add_the_address"
                android:ems="10"
                android:id="@+id/add_address_editText"
                style="@style/EditText" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mapa_imageView"
                android:layout_marginTop="15dp"
                android:background="@drawable/mapagoogle" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/add_apt_office_inf"
                android:ems="10"
                android:id="@+id/additional_info_address_editText"
                style="@style/EditText"
                />


            <TextView
                android:text="@string/address_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/address_type_textView"
                style="@style/TextViewParagraphWhite"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rg_select_direction_type">

                <RadioButton
                    android:text="@string/home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/home_Button"
                    android:checked="true"
                    style="@style/RadioButton" />

                <RadioButton
                    android:text="@string/office"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/office_Button"
                    style="@style/RadioButton"/>
            </RadioGroup>


        </LinearLayout>


        <Button
            android:text="@string/to_register"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:layout_width="316dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:id="@+id/button_register_me"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorBlueButton"
            android:textColor="@color/colorWhite"/>


    </LinearLayout>

</LinearLayout>

